:bug: Fix texts on deleteunpublish library

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -1857,28 +1857,24 @@ msgstr[0] "Delete file"
 msgstr[1] "Delete files"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.delete-shared-confirm.hint"
-msgid_plural "modals.delete-shared-confirm.hint"
+msgid "modals.delete-shared-confirm.activated.hint"
+msgid_plural "modals.delete-shared-confirm.activated.hint"
 msgstr[0] ""
-"If you delete it, those assets will no longer be available from other "
-"files. Assets that have already been used will remain in this file (no "
-"design will be broken!)."
+"Assets that have already been used in this file will remain there "
+"(no design will be broken)."
 msgstr[1] ""
-"If you delete them, those assets will no longer be available from other "
-"files. Assets that have already been used will remain in this file (no "
-"design will be broken!)."
+"Assets that have already been used in this file will remain there "
+"(no design will be broken)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.delete-shared-confirm.hint-many"
-msgid_plural "modals.delete-shared-confirm.hint-many"
+msgid "modals.delete-shared-confirm.activated.hint-many"
+msgid_plural "modals.delete-shared-confirm.activated.hint-many"
 msgstr[0] ""
-"If you delete it, those assets will no longer be available from other "
-"files. Assets that have already been used will remain in these files (no "
-"design will be broken!)."
+"Assets that have already been used in those files will remain there "
+"(no design will be broken)."
 msgstr[1] ""
-"If you delete them, those assets will no longer be available from other "
-"files. Assets that have already been used will remain in these file (no "
-"design will be broken!)."
+"Assets that have already been used in those files will remain there "
+"(no design will be broken)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-shared-confirm.message"
@@ -1887,26 +1883,24 @@ msgstr[0] "Are you sure you want to delete this file?"
 msgstr[1] "Are you sure you want to delete these files?"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.delete-shared-confirm.no-files-message"
-msgid_plural "modals.delete-shared-confirm.no-files-message"
+msgid "modals.delete-shared-confirm.activated.no-files-message"
+msgid_plural "modals.delete-shared-confirm.activated.no-files-message"
 msgstr[0] ""
-"None of the assets in this file's library are in use. They will be deleted "
-"along with the file."
+"It isn't activated in any file."
 msgstr[1] ""
-"None of the assets in these file's libraries are in use. They will be "
-"deleted along with the files."
+"They aren't activated in any file."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.delete-shared-confirm.scd-message"
-msgid_plural "modals.delete-shared-confirm.scd-message"
-msgstr[0] "Some of the assets in this file's library are in use here:"
-msgstr[1] "Some of the assets in these file's libraries are in use here:"
+msgid "modals.delete-shared-confirm.activated.scd-message"
+msgid_plural "modals.delete-shared-confirm.activated.scd-message"
+msgstr[0] "This library is activated here: "
+msgstr[1] "This libraries are activated here: "
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.delete-shared-confirm.scd-message-many"
-msgid_plural "modals.delete-shared-confirm.scd-message-many"
-msgstr[0] "Some of the assets in this file's library are in use here:"
-msgstr[1] "Some of the assets in these file's libraries are in use here:"
+msgid "modals.delete-shared-confirm.activated.scd-message-many"
+msgid_plural "modals.delete-shared-confirm.activated.scd-message-many"
+msgstr[0] "This library is activated here: "
+msgstr[1] "This libraries are activated here: "
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-shared-confirm.title"
@@ -2065,28 +2059,24 @@ msgstr[0] "Unpublish"
 msgstr[1] "Unpublish"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.unpublish-shared-confirm.hint"
-msgid_plural "modals.unpublish-shared-confirm.hint"
+msgid "modals.unpublish-shared-confirm.activated.hint"
+msgid_plural "modals.unpublish-shared-confirm.activated.hint"
 msgstr[0] ""
-"If you unpublish it, those assets will no longer be available from other "
-"files. Assets that have already been used will remain in this file (no "
-"design will be broken!)."
+"Assets that have already been used in this file will remain there "
+"(no design will be broken)."
 msgstr[1] ""
-"If you unpublish them, those assets will no longer be available from other "
-"files. Assets that have already been used will remain in this file (no "
-"design will be broken!)."
+"Assets that have already been used in this file will remain there "
+"(no design will be broken)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.unpublish-shared-confirm.hint-many"
-msgid_plural "modals.unpublish-shared-confirm.hint-many"
+msgid "modals.unpublish-shared-confirm.activated.hint-many"
+msgid_plural "modals.unpublish-shared-confirm.activated.hint-many"
 msgstr[0] ""
-"If you unpublish it, those assets will no longer be available from other "
-"files. Assets that have already been used will remain in these files (no "
-"design will be broken!)."
+"Assets that have already been used in those files will remain there "
+"(no design will be broken)."
 msgstr[1] ""
-"If you unpublish them, those assets will no longer be available from other "
-"files. Assets that have already been used will remain in these file (no "
-"design will be broken!)."
+"Assets that have already been used in those files will remain there "
+"(no design will be broken)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.message"
@@ -2095,22 +2085,22 @@ msgstr[0] "Are you sure you want to unpublish this library?"
 msgstr[1] "Are you sure you want to unpublish these libraries?"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.unpublish-shared-confirm.no-files-message"
-msgid_plural "modals.unpublish-shared-confirm.no-files-message"
-msgstr[0] "None of the assets in this library are in use."
-msgstr[1] "None of the assets in these libraries are in use."
+msgid "modals.unpublish-shared-confirm.activated.no-files-message"
+msgid_plural "modals.unpublish-shared-confirm.activated.no-files-message"
+msgstr[0] "It isn't activated in any file."
+msgstr[1] "They aren't activated in any file."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.unpublish-shared-confirm.scd-message"
-msgid_plural "modals.unpublish-shared-confirm.scd-message"
-msgstr[0] "Some of the assets in this library are in use here:"
-msgstr[1] "Some of the assets in these libraries are in use here:"
+msgid "modals.unpublish-shared-confirm.activated.scd-message"
+msgid_plural "modals.unpublish-shared-confirm.activated.scd-message"
+msgstr[0] "This library is activated here:"
+msgstr[1] "This libraries are activated here:"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.unpublish-shared-confirm.scd-message-many"
-msgid_plural "modals.unpublish-shared-confirm.scd-message-many"
-msgstr[0] "Some of the assets in this library are in use here:"
-msgstr[1] "Some of the assets in these libraries are in use here:"
+msgid "modals.unpublish-shared-confirm.activated.scd-message-many"
+msgid_plural "modals.unpublish-shared-confirm.activated.scd-message-many"
+msgstr[0] "This library is activated here:"
+msgstr[1] "This libraries are activated here:"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.title"
