--- a/frontend/translations/es.po
+++ b/frontend/translations/es.po
@@ -1912,28 +1912,25 @@ msgid_plural "modals.delete-shared-confirm.accept"
 msgstr[0] "Borrar archivo"
 msgstr[1] "Borrar archivos"
 
-#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.delete-shared-confirm.hint"
-msgid_plural "modals.delete-shared-confirm.hint"
-msgstr[0] ""
-"Si lo borras, sus elementos no estarán disponibles para otros archivos. Los "
-"elementos que hayan sido utilizados permanecerán en el archivo (¡ningún "
-"diseño se romperá!)."
-msgstr[1] ""
-"Si los borras, sus elementos no estarán disponibles para otros archivos. "
-"Los elementos que hayan sido utilizados permanecerán en el archivo (¡ningún "
-"diseño se romperá!)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.delete-shared-confirm.hint-many"
-msgid_plural "modals.delete-shared-confirm.hint-many"
+msgid "modals.delete-shared-confirm.activated.hint"
+msgid_plural "modals.delete-shared-confirm.activated.hint"
 msgstr[0] ""
-"Si lo borras, sus elementos no estarán disponibles para otros archivos. Los "
-"elementos que hayan sido utilizados permanecerán en los archivo (¡ningún "
-"diseño se romperá!)."
+"Los elementos que hayan sido utilizados en este archivo permanecerán allí "
+"(¡ningún diseño se romperá!)."
 msgstr[1] ""
-"Si los borras, sus elementos no estarán disponibles para otros archivos. "
-"Los elementos que hayan sido utilizados permanecerán en los archivo "
+"Los elementos que hayan sido utilizados en este archivo permanecerán allí "
+"(¡ningún diseño se romperá!)."
+
+#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
+msgid "modals.delete-shared-confirm.activated.hint-many"
+msgid_plural "modals.delete-shared-confirm.activated.hint-many"
+msgstr[0] ""
+"Los elementos que hayan sido utilizados en esos archivos permanecerán allí "
+"(¡ningún diseño se romperá!)."
+msgstr[1] ""
+"Los elementos que hayan sido utilizados en esos archivos permanecerán allí "
 "(¡ningún diseño se romperá!)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
@@ -1942,27 +1939,26 @@ msgid_plural "modals.delete-shared-confirm.message"
 msgstr[0] "¿Seguro que quieres borrar este archivo?"
 msgstr[1] "¿Seguro que quieres borrar estos archivos?"
 
+
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.delete-shared-confirm.no-files-message"
-msgid_plural "modals.delete-shared-confirm.no-files-message"
+msgid "modals.delete-shared-confirm.activated.no-files-message"
+msgid_plural "modals.delete-shared-confirm.activated.no-files-message"
 msgstr[0] ""
-"Ninguno de los elementos de su biblioteca están en uso. Se borrarán junto "
-"con el archivo."
+"No está activa en ningún fichero."
 msgstr[1] ""
-"Ninguno de los elementos de sus bibliotecas están en uso. Se borrarán junto "
-"con los archivos."
+"No están activas en ningún fichero."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.delete-shared-confirm.scd-message"
-msgid_plural "modals.delete-shared-confirm.scd-message"
-msgstr[0] "Algunos elementos de su biblioteca están siendo usados por:"
-msgstr[1] "Algunos elementos de sus bibliotecas están siendo usados por:"
+msgid "modals.delete-shared-confirm.activated.scd-message"
+msgid_plural "modals.delete-shared-confirm.activated.scd-message"
+msgstr[0] "Esta biblioteca está activa aquí: "
+msgstr[1] "Estas bibliotecas están activas aquí: "
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.delete-shared-confirm.scd-message-many"
-msgid_plural "modals.delete-shared-confirm.scd-message-many"
-msgstr[0] "Algunos elementos de su biblioteca están siendo usados por:"
-msgstr[1] "Algunos elementos de sus bibliotecas están siendo usados por:"
+msgid "modals.delete-shared-confirm.activated.scd-message-many"
+msgid_plural "modals.delete-shared-confirm.activated.scd-message-many"
+msgstr[0] "Esta biblioteca está activa aquí: "
+msgstr[1] "Estas bibliotecas están activas aquí: "
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.delete-shared-confirm.title"
@@ -2124,28 +2120,24 @@ msgstr[0] "Despublicar"
 msgstr[1] "Despublicar"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.unpublish-shared-confirm.hint"
-msgid_plural "modals.unpublish-shared-confirm.hint"
+msgid "modals.unpublish-shared-confirm.activated.hint"
+msgid_plural "modals.unpublish-shared-confirm.activated.hint"
 msgstr[0] ""
-"Si la despublicas, sus elementos no estarán disponibles para otros "
-"archivos. Los elementos que hayan sido utilizados permanecerán en el "
-"archivo (¡ningún diseño se romperá!)."
+"Los elementos que hayan sido utilizados en este archivo permanecerán allí "
+"(¡ningún diseño se romperá!)."
 msgstr[1] ""
-"Si las despublicas, sus elementos no estarán disponibles para otros "
-"archivos. Los elementos que hayan sido utilizados permanecerán en el "
-"archivo (¡ningún diseño se romperá!)."
+"Los elementos que hayan sido utilizados en este archivo permanecerán allí "
+"(¡ningún diseño se romperá!)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.unpublish-shared-confirm.hint-many"
-msgid_plural "modals.unpublish-shared-confirm.hint-many"
+msgid "modals.unpublish-shared-confirm.activated.hint-many"
+msgid_plural "modals.unpublish-shared-confirm.activated.hint-many"
 msgstr[0] ""
-"Si la despublicas, sus elementos no estarán disponibles para otros "
-"archivos. Los elementos que hayan sido utilizados permanecerán en los "
-"archivo (¡ningún diseño se romperá!)."
+"Los elementos que hayan sido utilizados en esos archivos permanecerán allí "
+"(¡ningún diseño se romperá!)."
 msgstr[1] ""
-"Si las despublicas, sus elementos no estarán disponibles para otros "
-"archivos. Los elementos que hayan sido utilizados permanecerán en los "
-"archivo (¡ningún diseño se romperá!)."
+"Los elementos que hayan sido utilizados en esos archivos permanecerán allí "
+"(¡ningún diseño se romperá!)."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.message"
@@ -2153,23 +2145,22 @@ msgid_plural "modals.unpublish-shared-confirm.message"
 msgstr[0] "¿Seguro que quieres despublicar esta biblioteca?"
 msgstr[1] "¿Seguro que quieres despublicar estas bibliotecas?"
 
-#: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.unpublish-shared-confirm.no-files-message"
-msgid_plural "modals.unpublish-shared-confirm.no-files-message"
-msgstr[0] "Ninguno de los elementos de esta biblioteca están en uso."
-msgstr[1] "Ninguno de los elementos de estas bibliotecas están en uso."
+msgid "modals.unpublish-shared-confirm.activated.no-files-message"
+msgid_plural "modals.unpublish-shared-confirm.activated.no-files-message"
+msgstr[0] "No está activa en ningún fichero."
+msgstr[1] "No están activas en ningún fichero."
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.unpublish-shared-confirm.scd-message"
-msgid_plural "modals.unpublish-shared-confirm.scd-message"
-msgstr[0] "Algunos elementos de esta bibioteca están siendo usados por:"
-msgstr[1] "Algunos elementos de estas bibiotecas están siendo usados por:"
+msgid "modals.unpublish-shared-confirm.activated.scd-message"
+msgid_plural "modals.unpublish-shared-confirm.activated.scd-message"
+msgstr[0] "Está activa aquí:"
+msgstr[1] "Están activas aquí:"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
-msgid "modals.unpublish-shared-confirm.scd-message-many"
-msgid_plural "modals.unpublish-shared-confirm.scd-message-many"
-msgstr[0] "Algunos elementos de esta bibioteca están siendo usados por:"
-msgstr[1] "Algunos elementos de estas bibiotecas están siendo usados por:"
+msgid "modals.unpublish-shared-confirm.activated.scd-message-many"
+msgid_plural "modals.unpublish-shared-confirm.activated.scd-message-many"
+msgstr[0] "Está activa aquí:"
+msgstr[1] "Están activas aquí:"
 
 #: src/app/main/ui/workspace/header.cljs, src/app/main/ui/dashboard/file_menu.cljs
 msgid "modals.unpublish-shared-confirm.title"
