:lipstick: UI structure redesign

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -3261,6 +3261,10 @@ msgid "workspace.header.viewer"
 msgstr "View mode (%s)"
 
 #: src/app/main/ui/workspace/header.cljs
+msgid "workspace.header.zoom"
+msgstr "Zoom"
+
+#: src/app/main/ui/workspace/header.cljs
 msgid "workspace.header.zoom-fill"
 msgstr "Fill - Scale to fill"
 
