--- a/frontend/translations/es.po
+++ b/frontend/translations/es.po
@@ -3348,6 +3348,10 @@ msgid "workspace.header.viewer"
 msgstr "Modo de visualización (%s)"
 
 #: src/app/main/ui/workspace/header.cljs
+msgid "workspace.header.zoom"
+msgstr "Zoom"
+
+#: src/app/main/ui/workspace/header.cljs
 msgid "workspace.header.zoom-fill"
 msgstr "Escalar para rellenar"
 
