--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -2704,6 +2704,9 @@ msgstr "Snap to pixel grid"
 msgid "shortcuts.start-editing"
 msgstr "Start editing"
 
+msgid "shortcuts.select-parent-layer"
+msgstr "Select parent layer"
+
 msgid "shortcuts.start-measure"
 msgstr "Start measurement"
 
