:tada: Add main/copy label on component in right bar

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -3396,6 +3396,12 @@ msgstr "Create an annotation"
 msgid "workspace.options.component.edit-annotation"
 msgstr "Edit an annotation"
 
+msgid "workspace.options.component.main"
+msgstr "MAIN"
+
+msgid "workspace.options.component.copy"
+msgstr "COPY"
+
 #: src/app/main/ui/workspace/sidebar/options/menus/measures.cljs
 msgid "workspace.options.constraints"
 msgstr "Constraints"
