:lipstick: Update desing tab phase 2 (#3621)
* :lipstick: Update constraint component
* :lipstick: Update fill and selected color components
* :lipstick: Update stroke component
* :lipstick: Update text component
* :lipstick: Update frame grid component
* :lipstick: Update export component
* :lipstick: Update shadow and blur components
* :lipstick: Update colorpicker component UI
* :lipstick: Update svg attrs and componets components UI
* :lipstick: Small UI changes
* :bug: Fix shadow functions

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -2284,6 +2284,10 @@ msgstr "Go to login"
 msgid "settings.multiple"
 msgstr "Mixed"
 
+#: src/app/main/ui/workspace/sidebar/options/rows/color_row.cljs,
+msgid "settings.detach"
+msgstr "Detach"
+
 # SECTIONS
 msgid "shortcut-section.basics"
 msgstr "Basics"
@@ -4141,12 +4145,24 @@ msgid "workspace.options.stroke-cap.circle-marker"
 msgstr "Circle marker"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/stroke.cljs
+msgid "workspace.options.stroke-cap.circle-marker-short"
+msgstr "Circle"
+
+#: src/app/main/ui/workspace/sidebar/options/menus/stroke.cljs
 msgid "workspace.options.stroke-cap.diamond-marker"
 msgstr "Diamond marker"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/stroke.cljs
+msgid "workspace.options.stroke-cap.diamond-marker-short"
+msgstr "Diamond"
+
+#: src/app/main/ui/workspace/sidebar/options/menus/stroke.cljs
 msgid "workspace.options.stroke-cap.line-arrow"
 msgstr "Line arrow"
+
+#: src/app/main/ui/workspace/sidebar/options/menus/stroke.cljs
+msgid "workspace.options.stroke-cap.line-arrow-short"
+msgstr "Arrow"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/stroke.cljs
 msgid "workspace.options.stroke-cap.none"
@@ -4165,8 +4181,16 @@ msgid "workspace.options.stroke-cap.square-marker"
 msgstr "Square marker"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/stroke.cljs
+msgid "workspace.options.stroke-cap.square-marker-short"
+msgstr "Rectangle"
+
+#: src/app/main/ui/workspace/sidebar/options/menus/stroke.cljs
 msgid "workspace.options.stroke-cap.triangle-arrow"
 msgstr "Triangle arrow"
+
+#: src/app/main/ui/workspace/sidebar/options/menus/stroke.cljs
+msgid "workspace.options.stroke-cap.triangle-arrow-short"
+msgstr "Triangle"
 
 msgid "workspace.options.stroke-color"
 msgstr "Stroke color"
